refactoring for cases when use use lower case or wrong city

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 server.port=8080
-server.servlet.context-path=/tutorialsMVC
 
-spring.application.name=Bootstrap Spring Boot
+spring.application.name=SpringBootCityGraphService
+
+# logging level
+logging.level.org.springframework=DEBUG
+
+logging.level.com.SpringBoot.MasterCard=DEBUG
